drivers: sdhc: added Infineon CAT1 SDHC/SDIO driver
Added initial version of Infineon CAT1 SDHC/SDIO driver

Added initial version of binding file for Infineon CAT1 SDHC/SDIO
driver

Signed-off-by: Nazar Palamar <nazar.palamar@infineon.com>

--- a/modules/hal_infineon/Kconfig
+++ b/modules/hal_infineon/Kconfig
@@ -27,6 +27,12 @@ config USE_INFINEON_SDIO
 	  Enable Secure Digital Input/Output interface (SDIO) HAL module for Infineon devices
 	  driver
 
+config USE_INFINEON_SDHC
+	bool
+	help
+	  Enable SDHC HAL module for Infineon devices
+	  driver
+
 config USE_INFINEON_SPI
 	bool
 	help
@@ -68,7 +74,6 @@ config USE_INFINEON_WDT
 
 config ABSTRACTION_RTOS_COMPONENT_ZEPHYR
 	bool "Abstraction RTOS component (Zephyr support)"
-	default n
 	help
 	  Enable Abstraction RTOS component with Zephyr support
 
