--- a/boards/arm/cy8cproto_062_4343w/cy8cproto_062_4343w_defconfig
+++ b/boards/arm/cy8cproto_062_4343w/cy8cproto_062_4343w_defconfig
@@ -8,7 +8,6 @@ CONFIG_SOC_SERIES_PSOC_62=y
 CONFIG_SOC_CY8C624ABZI_S2D44=y
 
 # General configuration
-CONFIG_CORTEX_M_SYSTICK=y
 CONFIG_BUILD_OUTPUT_HEX=y
 
 CONFIG_ARM_MPU=y
@@ -29,3 +28,6 @@ CONFIG_GPIO=y
 
 # Enable clock controller
 CONFIG_CLOCK_CONTROL=y
+
+# Main Stack Size
+CONFIG_MAIN_STACK_SIZE=2048
