--- a/modules/hal_infineon/CMakeLists.txt
+++ b/modules/hal_infineon/CMakeLists.txt
@@ -36,6 +36,12 @@ if (CONFIG_SOC_FAMILY_INFINEON_CAT1A)
   add_subdirectory(abstraction-rtos)
 endif()
 
+## Add Wi-Fi assets for AIROC devices
+if (CONFIG_WIFI_AIROC)
+  add_subdirectory(whd-bsp-integration)
+  add_subdirectory(wifi-host-driver)
+endif()
+
 ## Add BT assets for AIROC devices
 if (CONFIG_BT_AIROC)
   add_subdirectory(btstack-integration)
