--- a/dts/bindings/wifi/infineon,airoc-wifi.yaml
+++ b/dts/bindings/wifi/infineon,airoc-wifi.yaml
@@ -7,9 +7,8 @@ description: |
     AIROC Wi-Fi Connectivity.
 
     Example of enabling AIROC Wi-Fi device (for SDIO):
-      &sdhc0{
+      &sdhc0 {
         status = "okay";
-        compatible = "infineon,cat1-sdhc-sdio";
 
         /* SDIO pins */
         pinctrl-0 = <&p2_4_sdio_cmd &p2_5_sdio_clk &p2_0_sdio_data0
@@ -22,11 +21,10 @@ description: |
           compatible = "infineon,airoc-wifi-sdio";
 
           /* Wi-Fi control gpios */
-          wifi-reg-on-gpios    = <&gpio_prt2 6 0>;
-          wifi-host-wake-gpios = <&gpio_prt0 4 0>;
+          wifi-reg-on-gpios    = <&gpio_prt2 6 GPIO_ACTIVE_HIGH>;
+          wifi-host-wake-gpios = <&gpio_prt0 4 GPIO_ACTIVE_HIGH>;
         };
       };
-
 
 compatible: "infineon,airoc-wifi"
 
