--- a/boards/arm/cy8cproto_062_4343w/cy8cproto_062_4343w.dts
+++ b/boards/arm/cy8cproto_062_4343w/cy8cproto_062_4343w.dts
@@ -69,9 +69,8 @@ uart2: &scb2 {
 	};
 };
 
-&sdhc0{
+&sdhc0 {
 	status = "okay";
-	compatible = "infineon,cat1-sdhc-sdio";
 
 	/* SDIO pins */
 	pinctrl-0 = <&p2_4_sdio_cmd &p2_5_sdio_clk &p2_0_sdio_data0
@@ -84,8 +83,8 @@ uart2: &scb2 {
 		compatible = "infineon,airoc-wifi";
 
 		/* Wi-Fi control gpios */
-		wifi-reg-on-gpios    = <&gpio_prt2 6 0>;
-		wifi-host-wake-gpios = <&gpio_prt0 4 0>;
+		wifi-reg-on-gpios    = <&gpio_prt2 6 GPIO_ACTIVE_HIGH>;
+		wifi-host-wake-gpios = <&gpio_prt0 4 GPIO_ACTIVE_HIGH>;
 	};
 };
 
