fix name of 43439 FW (43439a0->43439A0) - update hal_infineon to https://github.com/zephyrproject-rtos/hal_infineon/pull/13

--- a/west.yml
+++ b/west.yml
@@ -168,8 +168,7 @@ manifest:
       groups:
         - hal
     - name: hal_infineon
-      url: https://github.com/npal-cy/hal_infineon-1
-      revision: topic/update_WHD
+      revision: pull/13/head
       path: modules/hal/infineon
       groups:
         - hal
