--- a/boards/arm/cy8cproto_062_4343w/cy8cproto_062_4343w_defconfig
+++ b/boards/arm/cy8cproto_062_4343w/cy8cproto_062_4343w_defconfig
@@ -8,6 +8,7 @@ CONFIG_SOC_SERIES_PSOC_62=y
 CONFIG_SOC_CY8C624ABZI_S2D44=y
 
 # General configuration
+CONFIG_CORTEX_M_SYSTICK=y
 CONFIG_BUILD_OUTPUT_HEX=y
 
 CONFIG_ARM_MPU=y
