replace NET_BUF_POOL_FIXED_DEFINE_ALIGN to NET_BUF_POOL_FIXED_DEFINE change revision hal_infineon to 69c883d3bd9fac8a18dd8384624b8c472a68d06f

--- a/west.yml
+++ b/west.yml
@@ -168,7 +168,7 @@ manifest:
       groups:
         - hal
     - name: hal_infineon
-      revision: pull/13/head
+      revision: 69c883d3bd9fac8a18dd8384624b8c472a68d06f
       path: modules/hal/infineon
       groups:
         - hal
