Boards: cyw20829: add custom flashloaded with 64k of erase block size
Add custom flashloaded (for openocd) with 64k of erase block size.
Default one has 512, which cause MCUbootloader overwrite during flash
primary application.

Signed-off-by: Nazar Palamar <nazar.palamar@infineon.com>

--- a/west.yml
+++ b/west.yml
@@ -174,7 +174,7 @@ manifest:
       groups:
         - hal
     - name: hal_infineon
-      revision: 88d2529a3c5aee2e81947553bf6cbacb4671088c
+      revision: pull/21
       path: modules/hal/infineon
       groups:
         - hal
